backend/deploy/deployment_backend_api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend-stripes
  labels:
    name: backend-stripes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: backend-stripes
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
    - hosts:
        - api.showyourlocalstripes.com
      secretName: letsencrypt-nginx-api
  rules:
    - host: 'api.showyourlocalstripes.com'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: api
                port:
                  number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: backend-stripes
  annotations:
    external-dns.alpha.kubernetes.io/hostname: apì.showyourlocalstripes.com
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: backend-stripes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: 'climate-backend'
          image: registry.digitalocean.com/avatar-registry/backend-stripes:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '400m'
